# kicad-diff-visualizer

./: README.md  pyproject.toml
src/kidivis/: __main__.py  diffimg.py  repo.py  review.py
src/kidivis/templates/: diffpcb.html
tests/: test_repo.py  test_review.py
