[project]
name = "kicad-diff-visualizer"
version = "0.1.0"
description = "A tool to visualize differences of two PCB patterns created by KiCad"
readme = "README.md"
authors = [
    { name = "uchan-nos", email = "uchan@uchan.net" },
]
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.0.0",
    "jinja2>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kidivis"]

[project.scripts]
kidivis = "kidivis.__main__:main"
